<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.thequizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/headers"
            android:text="@string/questa" />

        <EditText
            android:id="@+id/ans_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/hints"
            android:inputType="textCapWords" />


        <TextView
            style="@style/headers"
            android:text="@string/quest1" />


        <RadioGroup style="@style/rgroup">

            <RadioButton
                android:id="@+id/radioButton2"
                style="@style/rbutton"
                android:text="@string/ans1a" />

            <RadioButton
                android:id="@+id/radioButton"
                style="@style/rbutton"
                android:text="@string/ans1b" />

            <RadioButton
                android:id="@+id/radioButtonA"
                style="@style/rbutton"
                android:text="@string/ans1c" />
        </RadioGroup>


        <TextView
            style="@style/headers"
            android:text="@string/quest4" />

        <RadioGroup style="@style/rgroup">

            <RadioButton
                android:id="@+id/radioButton7"
                style="@style/rbutton"
                android:text="@string/ans4a" />

            <RadioButton
                android:id="@+id/radioButton8"
                style="@style/rbutton"
                android:text="@string/ans4b" />

            <RadioButton
                android:id="@+id/radioButton8a"
                style="@style/rbutton"
                android:text="@string/ans4c" />
        </RadioGroup>


        <TextView
            style="@style/headers"
            android:layout_marginTop="8dp"
            android:text="@string/smarter" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/white"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow"
                android:textAppearance="?android:textAppearanceMedium" />
        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/results" />


    </LinearLayout>


</ScrollView>